--- a/src/styles/ser_det.css
+++ b/src/styles/ser_det.css
@@ -1,35 +1,52 @@
-
-
 body {
-    background-color: #080808; /* Fondo oscuro */
-    color: #fff; /* Texto en color claro */
-    font-family: 'Arial', sans-serif; /* Tipografía moderna */
-  }
-  
-  .series-details {
+    background-color: #080808;
+    /* Fondo oscuro */
+    color: #fff;
+    /* Texto en color claro */
+    font-family: 'Arial', sans-serif;
+    /* Tipografía moderna */
+}
+
+.series-details {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
-  }
-  
-  h2 {
+}
+
+h2 {
     font-size: 2.5em;
     margin-bottom: 20px;
     text-transform: uppercase;
-  }
-  
-  p {
+}
+
+p {
     font-size: 1.2em;
     line-height: 1.6;
     margin-bottom: 15px;
-  }
-  
-  img {
+}
+
+img {
     max-width: 100%;
     height: auto;
     margin-bottom: 20px;
-    border-radius: 8px; /* Dar un borde redondeado a las imágenes */
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.2); /* Sombra suave */
-  }
-  
+    border-radius: 8px;
+    /* Dar un borde redondeado a las imágenes */
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+    /* Sombra suave */
+}
+
+.back-to-home-button {
+    background-color: #d22b88;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.back-to-home-button:hover {
+    background-color: #fa7b8c;
+}
