--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
-  background-color: #f5f5f5; /* Fondo */
+  background-color: #f5f5f5;
 }
 
 .movies,
@@ -25,7 +25,7 @@ h2 {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
-  width: calc(33.33% - 20px); /* Para mostrar tres elementos en una fila */
+  width: calc(33.33% - 20px); 
   box-sizing: border-box;
   padding: 10px;
   background-color: #333;
@@ -52,5 +52,20 @@ h2 {
 .series-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between; /* Distribución uniforme */
+  justify-content: space-between; 
+}
+
+.back-to-home-button {
+  background-color: #d22b88; 
+  color: #fff; 
+  padding: 10px 20px; 
+  border: none; 
+  border-radius: 5px; 
+  cursor: pointer; 
+  font-size: 16px; 
+  transition: background-color 0.3s ease; 
+}
+
+.back-to-home-button:hover {
+  background-color: #fa7b8c; 
 }
